# template-cpp20-cli

./: .buckconfig  .gitignore  .gitmodules  BUCK  CMakeLists.txt  LICENSE  README.md  subdir_glob.bzl
Template.xcodeproj/: project.pbxproj
include/: hello.hpp
src/: CMakeLists.txt  hello.cpp  main.cpp
test/: hello_test.cpp
toolchains/: BUCK
